--- a/Web/FrontEnd/src/Styles/Pesquisa.css
+++ b/Web/FrontEnd/src/Styles/Pesquisa.css
@@ -2,7 +2,7 @@
     margin: 0;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(#000, rgba(14, 26, 94, 0.834)) ;
+    background: linear-gradient(#2947b6, rgba(132, 150, 248, 0.834)) ;
 }
 
 .search-box {
