--- a/Web/FrontEnd/src/Styles/Home.css
+++ b/Web/FrontEnd/src/Styles/Home.css
@@ -1,146 +1,175 @@
 .app {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-attachment: fixed;
-    height: 140vh; 
-    background: linear-gradient(#2947b6, rgba(132, 150, 248, 0.834));
-  }
-  
-  .centered-square {
-    width: 950px;
-    height: 800px;
-    background-color: rgba(255, 255, 255, 0.625);
-    margin: auto;
-    position: absolute;
-    top: 200px;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    overflow: auto;
-  }
-  
-  .city-info {
-    position: relative;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    top: 25px;
-    left: -150px;
-  }
-  
-  .location-section {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  .weather-section {
-    font-size: 250px;
-    margin-top: 20px;
-    margin-left: -130px;
-  }
-  
-  .location-icon {
-    margin-right: 5px;
-    font-size: 30px;
-    left: -185px;
-    position: relative;
-  }
-  
-  .city-name {
-    font-size: 30px;
-    margin: 0;
-    left: -180px;
-    position: relative;
-  }
-  
-  .horizontal-line {
-    position: absolute;
-    width: 920px;
-    height: 2px;
-    background-color: #000;
-    bottom: 30;
-    top: 55px;
-    left: 170px;
-  }
-  
-  .new-line {
-    position: absolute;
-    width: 920px;
-    height: 2px;
-    background-color: #000;
-    bottom: 250px;
-    left: 170px;
-  }
-  
-  .temperature {
-    font-size: 250px;
-    margin-right: -650px;
-    margin-top: -270px;
-  }
-  
-  .weather-details {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-left: 110px;
-    left: 20px;
-  }
-  
-  .weather-detail {
-    text-align: center;
-    margin-top: -300px;
-    padding: 17px;
-    position: relative;
-    z-index: 1;
-    left: 80px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 140vh;
+  background: linear-gradient(#2947b6, rgba(132, 150, 248, 0.834));
+}
 
-  .line{
-    position: absolute;
-    width: 920px;
-    height: 2px;
-    background-color: #000;
-    bottom: 100px;
-    left: 170px;
-    z-index: 1;
-  }
-  
-  .weather-icon {
-    font-size: 64px;
-    margin-top: -70px; /* Ajuste conforme necessário */
-    padding: 15px;
-    position: relative;
-    z-index: 2;
-  }
+.centered-square {
+  width: 950px;
+  height: 850px;
+  background-color: rgba(245, 237, 237, 0.363);
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
 
-  .justify-content-around.mb-4.pb-3.pt-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: -80px;
-    font-size: 16px;
-  }
 
-      
-      
+.custom-button {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  background-color: #0d0e0e;
+  padding: 10px 50px;
+  border-radius: 5px;
+  overflow: hidden;
+  top: -50px;
+  margin:0;
+  right: -500px;
+}
+
+.visible-content {
+  display: block;
   
- 
-  
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: #000;
-    border-radius: 6px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background-color: #000;
-  }
-  
+}
+
+.hidden-content {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(132, 150, 248, 0.834);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: left 0.3s ease-in-out;
+}
+.custom-button:hover .hidden-content {
+  left: 0;
+}
+
+.city-info {
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 25px;
+  left: -150px;
+}
+
+.location-section {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.weather-section {
+  font-size: 250px;
+  margin-top: 20px;
+  margin-left: -130px;
+}
+
+.location-icon {
+  margin-right: 5px;
+  font-size: 30px;
+  left: -185px;
+  position: relative;
+}
+
+.city-name {
+  font-size: 30px;
+  margin: 0;
+  left: -180px;
+  position: relative;
+}
+
+.horizontal-line {
+  position: absolute;
+  width: 920px;
+  height: 2px;
+  background-color: #000;
+  bottom: 30;
+  top: 55px;
+  left: 170px;
+}
+
+.new-line {
+  position: absolute;
+  width: 920px;
+  height: 2px;
+  background-color: #000;
+  bottom: 250px;
+  left: 170px;
+}
+
+.temperature {
+  font-size: 250px;
+  margin-right: -650px;
+  margin-top: -270px;
+}
+
+.weather-details {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-left: 110px;
+  left: 20px;
+}
+
+.weather-detail {
+  text-align: center;
+  margin-top: -300px;
+  padding: 17px;
+  position: relative;
+  z-index: 1;
+  left: 80px;
+}
+
+.line{
+  position: absolute;
+  width: 920px;
+  height: 2px;
+  background-color: #000;
+  bottom: 100px;
+  left: 170px;
+  z-index: 1;
+}
+
+.weather-icon {
+  font-size: 64px;
+  margin-top: -70px; /* Ajuste conforme necessário */
+  padding: 15px;
+  position: relative;
+  z-index: 2;
+}
+
+.justify-content-around.mb-4.pb-3.pt-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: -80px;
+  font-size: 16px;
+}
+
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+}
