--- a/Web/FrontEnd/src/Styles/Home.css
+++ b/Web/FrontEnd/src/Styles/Home.css
@@ -232,5 +232,30 @@
   ::-webkit-scrollbar-track {
     background-color: #000;
   }
+
+  .rain-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Adapte a cor de fundo conforme necessário */
+    z-index: 1000;
+  }
+  
+  .rain-drop {
+    color: #4286f4; /* Cor da chuva */
+    font-size: 200px; /* Tamanho das gotas de chuva */
+    animation: fall linear infinite;
+  }
+  
+  @keyframes fall {
+    to {
+      transform: translateY(100vh);
+    }
+  }
   
  
